crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__list__tests__error_trailing_comma.snap
---
source: crates/alder-parse/src/pattern/list.rs
description: "Code:\n\n[a, b,]"
---
List(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
