crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__list__tests__error_unclosed.snap
---
source: crates/alder-parse/src/pattern/list.rs
description: "Code:\n\n[a, b"
---
List(
    End(
        1,
        6,
    ),
    1,
    1,
)
