crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__list__tests__multiline.snap
---
source: crates/alder-parse/src/pattern/list.rs
description: "Code (indented inside a def):\n\n    [\n        a,\n        b,\n        c\n    ]\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 5,
        },
        end: Position {
            line: 5,
            column: 6,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 9,
                    },
                    end: Position {
                        line: 2,
                        column: 10,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 9,
                    },
                    end: Position {
                        line: 3,
                        column: 10,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 9,
                    },
                    end: Position {
                        line: 4,
                        column: 10,
                    },
                },
                value: Var(
                    "c",
                ),
            },
        ],
    ),
}
