crates/alder-parse/src/pattern/snapshots/alder_parse__pattern__list__tests__multiple.snap
---
source: crates/alder-parse/src/pattern/list.rs
description: "Code:\n\n[a, b, c]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 10,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 3,
                    },
                },
                value: Var(
                    "a",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 5,
                    },
                    end: Position {
                        line: 1,
                        column: 6,
                    },
                },
                value: Var(
                    "b",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 8,
                    },
                    end: Position {
                        line: 1,
                        column: 9,
                    },
                },
                value: Var(
                    "c",
                ),
            },
        ],
    ),
}
